force-app/main/default/objects/Case_Status_Configuration__mdt/Case_Status_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Case Status Configuration</label>
    <pluralLabel>Case Status Configurations</pluralLabel>
</CustomObject>