force-app/main/default/objects/Case_Status_Configuration__mdt/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Service Request</fullName>
                <default>true</default>
                <label>General Service Request</label>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Special Services</fullName>
            </value>
            <value>
                <fullName>Broker Registration</fullName>
            </value>
            <value>
                <fullName>Community living</fullName>
            </value>
            <value>
                <fullName>Customer Service Complaint</fullName>
            </value>
            <value>
                <fullName>Defect liability Complaint</fullName>
            </value>
            <value>
                <fullName>Leasing Complaint</fullName>
            </value>
            <value>
                <fullName>Property Handover Complaint</fullName>
            </value>
            <value>
                <fullName>Property Transfer/Resale</fullName>
            </value>
            <value>
                <fullName>Sales Complaint</fullName>
            </value>
            <value>
                <fullName>Handover Service Request</fullName>
            </value>
            <value>
                <fullName>Maintenance Complaint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>