force-app/main/default/objects/Case_Status_Configuration__mdt/fields/Next_Applicable_Status__c.field-meta.xml
<CustomField>
    <fullName>Next_Applicable_Status__c</fullName>
    <label>Next Applicable Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>