force-app/main/default/objects/Case_Status_Configuration__mdt/fields/User_Identifier__c.field-meta.xml
<CustomField>
    <fullName>User_Identifier__c</fullName>
    <label>User Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>