force-app/main/default/objects/Case_Status_Configuration__mdt/listViews/View_All.listView-meta.xml
<ListView>
    <fullName>View_All</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Case_Type__c</columns>
    <columns>Next_Applicable_Status__c</columns>
    <columns>User_Identifier__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>View All</label>
</ListView>